--- a/Seance1.Rmd
+++ b/Seance1.Rmd
@@ -40,8 +40,7 @@ with a theoretical understanding of what's possible*
 
 
 
-## {data-background=#ffffff}
-<h1 style="color:#000">Drew Conway’s Data Science Venn Diagram </h1>
+## <span style="color:#000">Drew Conway’s Data Science Venn Diagram </span> {data-background=#ffffff}
 <div style="text-align:center">
 <img src="./images/VennDiagram.png" height="500px">
 </div>
@@ -205,7 +204,7 @@ http://www.comeetie.fr/galerie/francepixels/</a></h4>
 
 ## Quelques pointeurs
 <ul>
-<li>Dépot web du cours : 
+<li>Dépot web du cours : [https://github.com/comeetie/dsp5.git](https://github.com/comeetie/dsp5.git)
 <li>Mon adresse mail : <a href="mailto:etienne.come@ifsttar.fr">etienne.come@ifsttar.fr</a>
 <li>Mon compte twitter : <a href="http://www.twitter.com/comeetie">@comeetie</a>
 <li>Outils en ligne : <a href="http://www.google.com">Google</a>,<a href="http://www.StackOverflow.com">StackOverflow</a>, <a href="http://www.github.com">gitHub</a>, <a href="http://www.github.io">github.io</a>
