--- a/Seance3.Rmd
+++ b/Seance3.Rmd
@@ -496,22 +496,20 @@ sqldf(query)
 ## Les stops avec le + de routes ? </br>(avec leur noms)
 <h4>Correction</h4>
 Un count distinct avec un group by + jointures :
-<pre><code class="sql">SELECT COUNT(DISTINCT  ro.route_id) AS nbroutes, 
+<pre><code class="sql">SELECT COUNT(DISTINCT  tr.route_id) AS nbroutes, 
 st.stop_id, stn.stop_name 
-FROM stops AS stn, stop_times AS st,trips AS tr,routes AS ro 
+FROM stops AS stn, stop_times AS st,trips AS tr 
 WHERE st.stop_id=stn.stop_id AND st.trip_id=tr.trip_id 
-AND tr.route_id=ro.route_id 
 GROUP BY st.stop_id 
-ORDER BY nbroutes DESC LIMIT 1"</code></pre>
+ORDER BY nbroutes DESC LIMIT 5"</code></pre>
 en R, en utilisant sqldf :
 ```{r echo=TRUE,warning=FALSE}
-query="select count(distinct  ro.route_id) as nbroutes, 
+query="select count(distinct  tr.route_id) as nbroutes, 
 st.stop_id, stn.stop_name 
-from stops as stn, stop_times as st,trips as tr,routes as ro 
+from stops as stn, stop_times as st,trips as tr 
 where st.stop_id=stn.stop_id and st.trip_id=tr.trip_id 
-and tr.route_id=ro.route_id 
 group by st.stop_id 
-order by nbroutes desc limit 1"
+order by nbroutes desc limit 5"
 sqldf(query)
 ```
 
@@ -586,8 +584,8 @@ FROM stop_times GROUP BY trip_id
 en R, en utilisant sqldf :
 ```{r echo=TRUE,warning=FALSE}
 query="select trip_id, min(arrival_time), max(arrival_time), 
-max(strftime('%s','2014-01-01 ' || arrival_time))
-- min(strftime('%s','2014-01-01 ' || arrival_time)) as time 
+max(strftime('%s',arrival_time))
+- min(strftime('%s', arrival_time)) as time 
 from stop_times group by trip_id 
 order by time desc limit 5"
 sqldf(query)
